# axum-admin

./: .env.example  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml  vercel.yml
api/: axum.rs
apps/api/src/: errors.rs  lib.rs  main.rs  state.rs
apps/api/src/extractors/: current_user.rs
apps/api/src/middleware/: auth.rs
apps/ava/: Cargo.toml
apps/ava/src/: app.rs  cli.rs  config.rs  lib.rs  main.rs
apps/ava/src/commands/: init.rs  serve.rs
apps/desktop/src/api/: apis.test.ts  apis.ts  auth.test.ts  core.ts  files.test.ts  http.test.ts  http.ts  httpTestUtils.ts  logs.test.ts  logs.ts  menus.ts  users.test.ts  users.ts
apps/desktop/src/components/: AppHeader.test.ts  AppHeader.vue
apps/desktop/src/i18n/: index.ts
apps/desktop/src/router/: index.test.ts  index.ts
apps/desktop/src/stores/: auth.test.ts  auth.ts  authStorage.test.ts  authStorage.ts  (+5 more)
crates/api/: Cargo.toml
crates/api/src/: docs.rs  error.rs  mappings.rs  response.rs  state.rs
crates/api/tests/: health.rs
crates/audit/: Cargo.toml
crates/audit/src/: error.rs  event.rs  lib.rs  service.rs
crates/audit/tests/: events.rs
crates/auth/: Cargo.toml
crates/auth/src/: captcha.rs  jwt.rs  token.rs
crates/file-storage/: Cargo.toml
crates/file-storage/src/files/: error.rs  mod.rs  request.rs  service.rs
crates/file-storage/tests/: uploads.rs
crates/iam/: Cargo.toml
crates/metadata/: Cargo.toml
crates/system/src/: api_registry.rs  lib.rs  menu.rs
migrations/: 0004_unified_audit_events.sql  0006_seed_api_permissions.sql
(+89 files in other folders)
