[package]
name = "file-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# External crates.
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
